--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 17, 7, 31;
+    --background-end-rgb: 17, 7, 31;
   }
 }
 
@@ -30,4 +30,12 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.project:nth-child(2n) {
+  flex-direction: row-reverse;
+  }
+.project:nth-child(2n + 1) {
+  flex-direction: row;
 }
