--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,9 +33,9 @@ body {
 }
 
 
-.project:nth-child(2n) {
-  flex-direction: row-reverse;
+.project:nth-child(2n) > .projectDesc {
+  order: 1;
   }
-.project:nth-child(2n + 1) {
-  flex-direction: row;
+.project:nth-child(2n + 1) > .projectDesc  {
+  flex-direction: 2;
 }
